--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
-.title {
-  color: red;
+/* 初始化css的設定 */
+html, body, ul {
+  padding: 0;
+  margin: 0;
 }
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+nav {
+  background-color: #2b2b2b;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+/* .links下的<ul> */
+.links ul {
+  display: flex;
+}
+.links ul li {
+  margin-right: 1em;
+}
+.links ul li a {
+  color: rgb(226, 226, 226);
+}
+.links ul li a:hover {
+  color: white;
+  font-weight: bold;
+}
+
